# getting-started-with-github-copilot

./: .gitignore  README.md  pyproject.toml
.github/steps/: 1-step.md  2-step.md  3-step.md  4-step.md  5-step.md
docs/: notes.md
src/: README.md
